--- a/assets/style.css
+++ b/assets/style.css
@@ -14,5 +14,15 @@ body {
     text-align: center;
     font-size: 100px;
 }
+#alarm {
+    background-color: red;
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+    padding: 20px;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
 
+}
 
